--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "boboan",
+  "private":true,
   "license": "MIT",
   "devDependencies": {
     "@types/lodash": "^4.17.4",
+    "@types/node": "^20.14.0",
     "@types/screeps": "^3.3.8",
     "lodash": "^4.17.21",
-    "@types/node": "^20.14.0",
-    "screeps-server-mockup": "^1.5.1"
+    "screeps-server-mockup": "^1.5.1",
+    "version_gen":"1.0.0"
   },
-  "scripts": {
-    "load":"node utils/loadModules"
-  }
+  "workspaces":["packages/*"]
 }
